<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/lbl_shape"
                android:textColor="@color/colorWhite"
                android:background="@drawable/textbg"
                android:padding="5dp"
                android:textSize="20dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
            <RadioGroup
                android:id="@+id/shape"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/shapeSquare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:button="@android:color/transparent"
                    android:drawableTop="@drawable/square"
                    android:gravity="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="18dp"
                    android:text="@string/lbl_shape_square"/>
                <RadioButton
                    android:id="@+id/shapeTriangle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:button="@android:color/transparent"
                    android:drawableTop="@drawable/heart"
                    android:gravity="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="18dp"
                    android:text="@string/lbl_shape_heart"/>
                <RadioButton
                    android:id="@+id/shapeCircle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:button="@android:color/transparent"
                    android:drawableTop="@drawable/circle"
                    android:gravity="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="18dp"
                    android:text="@string/lbl_shape_round"/>
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30px">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/lbl_flavor"
                android:textColor="@color/colorWhite"
                android:background="@drawable/textbg"
                android:padding="5dp"
                android:textSize="20dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioGroup
                android:id="@+id/flavor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/flavorCaramel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_flavor_caramel"
                    android:textColor="@color/colorBlack"
                    android:buttonTint="@color/colorBlack"
                    android:textSize="18dp" />
                <RadioButton
                    android:id="@+id/flavorChocolate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_flavor_chocolate"
                    android:textColor="@color/colorBlack"
                    android:buttonTint="@color/colorBlack"
                    android:textSize="18dp" />
                <RadioButton
                    android:id="@+id/flavorStrawberry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_flavor_strawberry"
                    android:textColor="@color/colorBlack"
                    android:buttonTint="@color/colorBlack"
                    android:textSize="18dp" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/lbl_topping"
                android:textColor="@color/colorWhite"
                android:background="@drawable/textbg"
                android:padding="5dp"
                android:textSize="20dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioGroup
                android:id="@+id/topping"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/toppingBerries"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_topping_berries"
                    android:textColor="@color/colorBlack"
                    android:buttonTint="@color/colorBlack"
                    android:textSize="16dp" />
                <RadioButton
                    android:id="@+id/toppingFruits"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_topping_fruits"
                    android:textColor="@color/colorBlack"
                    android:buttonTint="@color/colorBlack"
                    android:textSize="16dp" />
                <RadioButton
                    android:id="@+id/toppingChoco"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_topping_choco"
                    android:textColor="@color/colorBlack"
                    android:buttonTint="@color/colorBlack"
                    android:textSize="16dp" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_message"
                android:textColor="@color/colorWhite"
                android:background="@drawable/textbg"
                android:padding="5dp"
                android:textSize="20dp"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/greetings"
                android:layout_width="390dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/btn_submit"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>